Mark phases 1–4 complete in phase docs; add accurate run commands
All definition-of-done checkboxes updated to reflect actual implementation.
Added notes on deviations from original plan (e.g. YAML-driven scoring via
FeatureResolver instead of per-product scorer subclasses, exec:exec property
syntax, spring-boot:run working directory, classpath-vs-JAR fix).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>